sync: 镜像 nexusai master 301f3ede（0.1.17：前缀缓存头部会话级冻结，对齐 CC 2.1.278）
- 后端 src：新增 OutboundWireProjection / SessionPromptCacheStore / SessionPromptCacheRegistry /
  SystemPromptCacheBreakWhitelist / PromptCacheGroup / ChangedFilesDetector /
  SessionChangedFilesBaselineRegistry 及配套 12 个测试类（含 Outbound* 三个探针用例 + 3 个 test/support 夹具）
- 后端 src：system prompt 分段缓存与上下文冻结值改会话级分区，55 处修改（StreamingToolExecutor /
  ChatService / SessionService / OpenAiSdkProvider / WebSocketPermissionPrompter 等）+ application.yml
- 前端 frontend：MessageList.tsx / utils/format.ts 修改，新增 utils/sendUserMessage.ts 及 __tests__
- 版本 -> 0.1.17：pom.xml / frontend/package.json / src-tauri/{Cargo.toml,Cargo.lock,tauri.conf.json}
- frontend/CHANGELOG.md：0.1.17 段
- 无镜像目标故未同步：backend/CHANGELOG.md、docs/zjkycode/plans/2026-09-20-prefix-cache-head-freeze-cc-align.md

Co-Authored-By: Claude Code <noreply@anthropic.com>